Fix sample Axis2Server to work on JDK11 and latest kernel
Fix: https://github.com/wso2/product-ei/issues/4747